# exliver

./: .gitignore  build.gradle  exliver-retry.rar  keystore  keystore.p12  settings.gradle
app/: CMakeLists.txt  build.gradle
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/src/androidTest/java/io/e4x/exliver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CallJava.cpp  CallJava.h  RtmpPush.cpp  UdxTcpSink_P2p.cpp  UdxTcpSink_P2p.h  push.cpp  rtmp.cpp  rtmp.h
app/src/main/cpp/include/: FastUdx.h  mntypedef.h  udxos.h
app/src/main/cpp/librtmp/: rtmp.c  rtmp.h
app/src/main/java/io/e4x/exliver/: ActivityHidden.kt  FirstFragment.kt  JniRtmpConnector.java  MainActivity.kt  NotificationActivity.kt  RecordForgroundServiceActivity.kt  RecordService.kt  SecondFragment.kt
app/src/main/java/io/e4x/exliver/app/: App.kt
app/src/main/java/io/e4x/exliver/controllers/: CamManager.kt  MediaRecordService.kt  RecordFileReader.kt  RecordUploader.kt
app/src/main/java/io/e4x/exliver/model/: ActivityBean.java  MessageBus.java
app/src/main/java/io/e4x/exliver/net/: IUploadServices.kt  NetworkException.kt  UploadResault.kt  UploadServices.kt  UploadUpdateEvent.kt  _Call.kt
app/src/main/java/io/e4x/exliver/net/entities/: RequestAdd.kt  RequestUploadFileList.kt  UploadFileListEvent.kt  UploadQueryEvent.kt
app/src/main/java/io/e4x/exliver/utils/: Bitrate.kt  DeviceHelper.kt  FileUtil.kt  SharedPreferencesUtils.kt  Utils.kt
app/src/main/java/io/e4x/exliver/views/: AutoFitSurfaceView.kt  ScreenService.kt
app/src/main/java/io/e4x/exliver/vo/: CameraSurface.kt  RecordVO.kt
app/src/main/java/live/camera/: CameraEglSurfaceView.java  CameraFboRender.java  CameraHelper.java  CameraRender.java
app/src/main/java/live/egl/: EglHelper.java  EglSurfaceView.java
app/src/main/java/live/rtmp/: OnConntionListener.java  RtmpHelper.java
app/src/main/java/live/rtmp/encoder/: AudioRecorder.java  BasePushEncoder.java  PushEncode.java  VideoPushRender.java
app/src/main/java/live/util/: ByteUtil.java  DisplayUtil.java  ShaderUtil.java
app/src/main/res/layout/: activity_main.xml  activity_notification.xml  activity_record_forground_service.xml  fragment_first.xml  notification.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/main/res/xml/: network_permissions.xml
app/src/test/java/io/e4x/exliver/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
